--- a/src/installer/pkg/packaging/rpm/package.props
+++ b/src/installer/pkg/packaging/rpm/package.props
@@ -5,28 +5,19 @@
     <rpmPackagingConfigPath>$(PackagingRoot)rpm/</rpmPackagingConfigPath>
     <SharedHostRpmPkgName>dotnet-host</SharedHostRpmPkgName>
     <SharedHostRpmPkgName>$(SharedHostRpmPkgName.ToLower())</SharedHostRpmPkgName>
-    <HostFxrRpmPkgName>dotnet-hostfxr-$(HostResolverVersion)</HostFxrRpmPkgName>
-    <HostFxrRpmPkgName>$(HostFxrRpmPkgName.ToLower())</HostFxrRpmPkgName>
-    <SharedFxRpmPkgName>dotnet-runtime-$(SharedFrameworkNugetVersion)</SharedFxRpmPkgName>
-    <SharedFxRpmPkgName>$(SharedFxRpmPkgName.ToLower())</SharedFxRpmPkgName>
-    <RuntimeDependenciesRpmPkgName>$(DotnetRuntimeDependenciesPackageString)$(ProductVersion)</RuntimeDependenciesRpmPkgName>
-    <RuntimeDependenciesRpmPkgName>$(RuntimeDependenciesRpmPkgName.ToLower())</RuntimeDependenciesRpmPkgName>
-    <TemplatesDir>$(MSBuildThisFileDirectory)/templates</TemplatesDir>
-    <ScriptsDir>$(MSBuildThisFileDirectory)/scripts</ScriptsDir>
-
-  </PropertyGroup>
-  
-  
-  
-  <PropertyGroup Condition="'$(BuildUpgradeableLinuxPackages)' == 'true' AND '$(InstallerExtension)' == '.rpm'">
-    <PackageNameSuffix>$(MajorVersion).$(MinorVersion)</PackageNameSuffix>
-    
     <HostFxrRpmPkgName>dotnet-hostfxr-$(PackageNameSuffix)</HostFxrRpmPkgName>
     <HostFxrRpmPkgName>$(HostFxrRpmPkgName.ToLower())</HostFxrRpmPkgName>
     <SharedFxRpmPkgName>dotnet-runtime-$(PackageNameSuffix)</SharedFxRpmPkgName>
     <SharedFxRpmPkgName>$(SharedFxRpmPkgName.ToLower())</SharedFxRpmPkgName>
     <RuntimeDependenciesRpmPkgName>$(DotnetRuntimeDependenciesPackageString)$(PackageNameSuffix)</RuntimeDependenciesRpmPkgName>
     <RuntimeDependenciesRpmPkgName>$(RuntimeDependenciesRpmPkgName.ToLower())</RuntimeDependenciesRpmPkgName>
+
+    <TemplatesDir>$(MSBuildThisFileDirectory)/templates</TemplatesDir>
+    <ScriptsDir>$(MSBuildThisFileDirectory)/scripts</ScriptsDir>
+
+  </PropertyGroup>
+  
+  <PropertyGroup Condition="'$(InstallerExtension)' == '.rpm'">
     
     <HostPackageVersion Condition="'$(UseShippedHostPackage)' != 'true'">$(ProductionVersion)</HostPackageVersion>
     
