--- a/src/libraries/config.json
+++ b/src/libraries/config.json
@@ -198,12 +198,6 @@
       "values": [],
       "defaultValue": ""
     },
-    "ToolSetDir": {
-      "description": "Native toolset directory",
-      "valueType": "passThrough",
-      "values": [],
-      "defaultValue": "toolSetDir=c:\\tools\\clr"
-    },
     "Sync": {
       "description": "MsBuild target that restores the packages.",
       "valueType": "target",
@@ -492,8 +486,7 @@
            "CmakeBuildType": "default",
            "HostOs": "default",
            "ProcessorCount": "default",
-           "AdditionalArgs": "-portable",
-           "ToolSetDir": "default"
+           "AdditionalArgs": "-portable"
          }
       }
     },
